--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ docutils==0.15.2
 docx2txt==0.8
 pdf2image==1.9.0
 pdfminer.six==20181108
+pypiwin32==223
 PyPDF3==1.0.1
 PySide2==5.14.0
 PySimpleGUIQt==0.28.0
+pywin32==227
+pywin32-ctypes==0.2.0
 six==1.12.0
+tabulate==0.8.6
