--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 beautifulsoup4==4.8.0
 chardet==3.0.4
-docutils==0.15.2
 docx2txt==0.8
 pdf2image==1.9.0
 pdfminer.six==20181108
 pypiwin32==223
 PyPDF3==1.0.1
-PySide2==5.14.0
-PySimpleGUIQt==0.28.0
+PySimpleGUI
+# PySimpleGUIQt==0.28.0
+PySimpleGUI==4.14.1
+python-pptx==0.6.18
 pywin32==227
 pywin32-ctypes==0.2.0
 six==1.12.0
 tabulate==0.8.6
+
+
