--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ docx2txt==0.8
 pdf2image==1.9.0
 pdfminer.six==20181108
 PyPDF3==1.0.1
-# PySimpleGUIQt==0.28.0
-PySimpleGUI==4.14.1
+PySimpleGUIQt==0.28.0
+#PySimpleGUI==4.14.1
 python-pptx==0.6.18
 pywin32==227
 pywin32-ctypes==0.2.0
 six==1.12.0
 tabulate==0.8.6
-
+striprtf==0.0.8
 
