--- a/Info.plist
+++ b/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0-beta3</string>
+	<string>1.0.1</string>
   <key>NSHighResolutionCapable</key>
   <string>True</string>
 </dict>
