--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 docx2txt==0.8
 pdf2image==1.9.0
 pdfminer.six==20181108
+pdf2docx==0.5.1
 PyPDF3==1.0.1
 PySimpleGUIQt==0.28.0
 PySimpleGUI==4.38.0
