Update packaging logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ PyPDF3==1.0.1
 PySimpleGUIQt==0.28.0
 PySimpleGUI==4.38.0
 python-pptx==0.6.18
-pywin32==227
-pywin32-ctypes==0.2.0
+#pywin32==227
+#pywin32-ctypes==0.2.0
 six==1.12.0
 tabulate==0.8.6
 striprtf==0.0.8
